# gameGene

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/: RELEASE_NOTES_FOOTER.md
.github/workflows/: ci.yml  release.yml
assets/: make_icon.py
crates/gamegene-app/: Cargo.toml  build.rs
crates/gamegene-app/assets/: icon.rgba  serif.LICENSE.txt
crates/gamegene-app/src/: app.rs  fonts.rs  i18n.rs  icon.rs  main.rs  settings.rs  theme.rs
crates/gamegene-app/src/app/: array.rs  chrome.rs  memview.rs  mod.rs  process.rs  scan.rs  scan_job.rs  table.rs
crates/gamegene-app/src/i18n/: en.rs  ja.rs  mod.rs  zh_hant.rs
crates/gamegene-app/tests/: layout_probe.rs
crates/gamegene-core/: Cargo.toml
crates/gamegene-core/src/: constants.rs  error.rs  fill.rs  find.rs  group.rs  hexview.rs  lib.rs  mock.rs  pointer.rs  process.rs  scan.rs  structure.rs  table.rs  value.rs
crates/gamegene-core/tests/: find_tests.rs  hexview_tests.rs  pointer_tests.rs  scan_bench.rs  scan_tests.rs  structure_tests.rs  table_tests.rs
crates/gamegene-platform/: Cargo.toml
crates/gamegene-platform/src/: lib.rs  linux.rs  windows.rs
crates/gamegene-platform/tests/: linux_selftest.rs
crates/memgene-app/: Cargo.toml
crates/memgene-app/src/: app.rs  main.rs  theme.rs
crates/memgene-core/: Cargo.toml
crates/memgene-core/src/: constants.rs  lib.rs  mock.rs  process.rs  scan.rs  table.rs  value.rs
crates/memgene-core/tests/: scan_tests.rs  table_tests.rs
crates/memgene-platform/: Cargo.toml
crates/memgene-platform/src/: lib.rs  linux.rs  windows.rs
crates/memgene-platform/tests/: linux_selftest.rs
