[workspace]
resolver = "2"
members = [
    "crates/memgene-core",
    "crates/memgene-platform",
    "crates/memgene-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MemGene contributors"]
repository = "https://github.com/your-name/memgene"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
