[workspace]
resolver = "2"
members = [
    "crates/gamegene-core",
    "crates/gamegene-platform",
    "crates/gamegene-app",
]

[workspace.package]
version = "0.13.0"
edition = "2021"
license = "MIT"
authors = ["GameGene contributors"]
repository = "https://github.com/your-name/gamegene"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
