[package]
name = "gamegene-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gamegene"
path = "src/main.rs"

[dependencies]
gamegene-core = { path = "../gamegene-core" }
gamegene-platform = { path = "../gamegene-platform" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.28"
rfd = "0.14"
