[package]
name = "gamegene-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gamegene"
path = "src/main.rs"

[dependencies]
gamegene-core = { path = "../gamegene-core" }
gamegene-platform = { path = "../gamegene-platform" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence", # remember theme / language / shortcuts across restarts
] }
egui = "0.28"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }

# Embed the icon (and version info) into the Windows .exe so the taskbar,
# Explorer, and pinned shortcuts use the brand mark, not a default icon.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
