[package]
name = "gamegene-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# SIMD substring/byte search for the pattern (AOB / text) finder.
memchr = "2"

[lints.rust]
unsafe_code = "forbid"
