[package]
name = "memgene-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "memgene"
path = "src/main.rs"

[dependencies]
memgene-core = { path = "../memgene-core" }
memgene-platform = { path = "../memgene-platform" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.28"
rfd = "0.14"
