[package]
name = "memgene-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memgene-core = { path = "../memgene-core" }

# Windows: real process access via the official Win32 bindings.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
